Enable deprecation warnings and fix deprecated URL constructor